name: hsplurk
version: 0.0.1
cabal-version:  >= 1.2
build-type: Simple
license:  BSD3
license-file: LICENSE
author: Jyun-Yan You
maintainer: Jyun-Yan You <crabtw@gmail.com>
synopsis: Haskell implementation of Plurk API
description: Haskell implementation of Plurk API
category: Web

library
  build-depends: base >= 3, curl, json > 0.4, time, old-locale,
                 containers, utf8-string
  exposed-modules: Web.Plurk,
                   Web.Plurk.Types,
                   Web.Plurk.Client,
                   Web.Plurk.Users,
                   Web.Plurk.Profile
  ghc-options: -Wall
